src/main/ui/src/App.css
* {
  box-sizing: border-box;
}

:root {
  --red-color:#fe2700;
  --orange-color:#ff8200;
  --sand-color:#fda738;
  --brown-color:#7e0901;
  --browsn2-color:#654132;
  --gray-color:#464748;
}

.flex-container-home{
  display: flex;
  flex-wrap: wrap;
  text-align: center;
}
.navbar {
  display: flex;
  padding: 10px;
  flex: 1%;
  max-height: 9%;
}

.inside {
  background-color: var(--orange-color);
  /*padding: 10px;*/
  flex: 88%;
}

.footer {
  padding: 10px;
  flex: 10%;
  max-height: 10%;

}

